--- a/index.html
+++ b/index.html
@@ -80,11 +80,7 @@
                     <div class="main-navbar" data-aos="fade-up" data-aos-duration="1000">
                         <nav class="navbar-custom">
                             <div class="d-flex align-items-center justify-content-between">
-                                <a href="index.html" class="nav-brand d-block d-lg-none">
-                                    <h4 class="fw_500 n0-color golelayla-logo">
-                                        Bento<span class="s1-color">X</span>
-                                    </h4>
-                                </a>
+                                <a href="index.html" class="nav-brand d-block d-lg-none"><img src="assets/images/logo.svg" alt="logo"></a>
                                 <div class="d-flex gap-6">
                                     <div class="switch-wrapper-top d-flex d-lg-none"></div>
                                     <button class="navbar-toggle-btn d-block d-lg-none" type="button">
@@ -98,11 +94,7 @@
                             <div class="navbar-toggle-item">
                                 <div class="d-flex gap-5 flex-column flex-lg-row text-lg-start text-center align-items-start align-items-lg-center justify-content-center justify-content-between mt-5 mt-lg-0">
                                     <div class="navbar-brand logo d-none d-lg-flex">
-                                        <a href="index.html">
-                                            <h4 class="fw_600 n0-color">
-                                                Bento<span class="s1-color">X</span>
-                                            </h4>
-                                        </a>
+                                        <a href="index.html"><img src="assets/images/logo.svg" alt="logo"></a>
                                     </div>
                                     <ul class="custom-nav d-grid d-lg-flex gap-5 gap-lg-8 gap-xl-10 justify-content-lg-start">
                                         <li class="menu-item position-relative">
