--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                     <div class="main-navbar" data-aos="fade-up" data-aos-duration="1000">
                         <nav class="navbar-custom">
                             <div class="d-flex align-items-center justify-content-between">
-                                <a href="index.html" class="nav-brand d-block d-lg-none"><img src="assets/images/logo.svg" alt="logo"></a>
+                                <a href="index.html" class="nav-brand d-block d-lg-none"><img src="assets/images/logo_logo.png" alt="logo"></a>
                                 <div class="d-flex gap-6">
                                     <div class="switch-wrapper-top d-flex d-lg-none"></div>
                                     <button class="navbar-toggle-btn d-block d-lg-none" type="button">
@@ -94,21 +94,13 @@
                             <div class="navbar-toggle-item">
                                 <div class="d-flex gap-5 flex-column flex-lg-row text-lg-start text-center align-items-start align-items-lg-center justify-content-center justify-content-between mt-5 mt-lg-0">
                                     <div class="navbar-brand logo d-none d-lg-flex">
-                                        <a href="index.html"><img src="assets/images/logo.svg" alt="logo"></a>
+                                        <a href="index.html"><img src="assets/images/logo_logo.png" alt="logo"></a>
                                     </div>
                                     <ul class="custom-nav d-grid d-lg-flex gap-5 gap-lg-8 gap-xl-10 justify-content-lg-start">
                                         <li class="menu-item position-relative">
-                                            <a href="#0">
-                                                Home <i class="fas fa-chevron-down"></i>
+                                            <a href="#">
+                                                Home
                                             </a>
-                                            <ul class="sub-menu home-scroolls box-shadow3">
-                                                <li class="menu-link pt-3">
-                                                    <a href="index.html">Home One</a>
-                                                </li>
-                                                <li class="menu-link pt-1">
-                                                    <a href="index-2.html">Home Two</a>
-                                                </li>
-                                            </ul>
                                         </li>
                                         <li class="menu-item position-relative">
                                             <a href="about.html">
