--- a/index1.html
+++ b/index1.html
@@ -110,16 +110,8 @@
                                     <ul class="custom-nav d-grid d-lg-flex gap-5 gap-lg-8 gap-xl-10 justify-content-lg-start">
                                         <li class="menu-item position-relative">
                                             <a href="#0">
-                                                Home <i class="fas fa-chevron-down"></i>
+                                                Home
                                             </a>
-                                            <ul class="sub-menu home-scroolls box-shadow3">
-                                                <li class="menu-link pt-3">
-                                                    <a href="index.html">Home One</a>
-                                                </li>
-                                                <li class="menu-link pt-1">
-                                                    <a href="index-2.html">Home Two</a>
-                                                </li>
-                                            </ul>
                                         </li>
                                         <li class="menu-item position-relative">
                                             <a href="about.html">
